Enum petition_status_enum {
  pending
  approved
  rejected
}

Table user {
  user_id int [pk, increment]
  user_status_id int [not null, note: "FK obligatoria: todo usuario nace con un estado (ej. pending_activation)"]
  role_id int [not null]
  alias varchar(50) [not null, unique]
  activated boolean [default: false]
}

Table user_status {
  user_status_id int [pk, increment]
  code varchar(30) [not null, unique]
  name varchar(60) [not null]
  description varchar(150) [not null]
}

Table role {
  role_id int [pk, increment]
  code varchar(30) [not null, unique]
  name varchar(60) [not null]
  description varchar(150) [not null]
}

Table permission {
  permission_id int [pk, increment]
  code varchar(50) [not null, unique]
  name varchar(80) [not null]
  description varchar(150) [not null]
}

Table role_permission {
  role_permission_id int [pk, increment]
  role_id int [not null]
  permission_id int [not null]
  Indexes {
    (role_id, permission_id) [unique]
  }
}

Table login_credentials {
  login_credentials_id int [pk, increment]
  user_id int [not null, unique, note: "1:1 con user"]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  last_login_at timestamp
}

Table user_status_history {
  user_status_history_id int [pk, increment]
  user_id int [not null]
  user_status_id int [not null]
  reason varchar(150) [not null]
  changed_at timestamp [default: `now()`]
}

Table account_activation {
  account_activation_id int [pk, increment]
  user_id int [not null, unique, note: "fix: en el MER original venia marcado como PK compuesta; se deja como FK unica (1 activacion vigente por usuario)"]
  activation_code varchar(6) [not null]
  activated boolean [default: false]
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
}

Table recover_password {
  recover_password_id int [pk, increment]
  user_id int [not null]
  code varchar(6) [not null]
  code_status boolean [default: false]
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  last_password_hash varchar(255)
}

Table password_history {
  password_history_id int [pk, increment]
  user_id int [not null]
  password_hash varchar(255) [not null]
  changed_at timestamp [default: `now()`]
}

Table auth_session {
  auth_session_id int [pk, increment]
  user_id int [not null]
  access_token varchar(512) [not null]
  issued_at timestamp [default: `now()`]
  expires_at timestamp [not null]
  ip_address varchar(45)
  user_agent varchar(200)
  revoked boolean [default: false]
  revoked_at timestamp
}

Table refresh_token {
  refresh_token_id int [pk, increment]
  user_id int [not null]
  auth_session_id int [not null]
  token varchar(512) [not null, unique]
  issued_at timestamp [default: `now()`]
  expires_at timestamp [not null]
  revoked boolean [default: false]
  revoked_at timestamp
}

Table account_lockout {
  account_lockout_id int [pk, increment]
  user_id int [not null]
  failed_attempts int [default: 0]
  window_started_at timestamp
  locked_until timestamp
}

Table oauth_account {
  oauth_account_id int [pk, increment]
  user_id int [not null]
  provider varchar(40) [not null]
  provider_user_id varchar(100) [not null]
  email varchar(255)
  linked_at timestamp [default: `now()`]
  Indexes {
    (provider, provider_user_id) [unique]
  }
}

Table organizer_petition {
  organizer_petition_id int [pk, increment]
  user_id int [not null]
  document blob [not null]
  application_date timestamp [default: `now()`]
  status petition_status_enum [not null, default: 'pending']
}

Ref: account_activation.user_id > user.user_id
Ref: account_lockout.user_id > user.user_id
Ref: auth_session.user_id > user.user_id
Ref: login_credentials.user_id > user.user_id
Ref: oauth_account.user_id > user.user_id
Ref: organizer_petition.user_id > user.user_id
Ref: password_history.user_id > user.user_id
Ref: recover_password.user_id > user.user_id
Ref: refresh_token.auth_session_id > auth_session.auth_session_id
Ref: refresh_token.user_id > user.user_id
Ref: role_permission.permission_id > permission.permission_id
Ref: role_permission.role_id > role.role_id
Ref: user.role_id > role.role_id
Ref: user.user_status_id > user_status.user_status_id
Ref: user_status_history.user_id > user.user_id
Ref: user_status_history.user_status_id > user_status.user_status_id